--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ yarn-error.log
 .env
 /.phpstorm.meta.php
 /_ide_helper.php
-/public/img/*
-/public/css/*
-/public/fonts/*
-/public/js/*
-/public/mix-manifest.json
+/public
+!/public/.htaccess
+!/public/favicon.ico
+!/public/index.php
+!/public/robots.txt
